--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,43 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">Queueable</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li><%= link_to "Test Runs", test_runs_path %></li>
+          <li class="dropdown" id="menu1">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'Linux' %></li>
+              <li><%= link_to 'SunOS' %></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="span9">
+      <%= yield %>
+    </div>
+    <div class="span3">
+      <h2>About</h2>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
