Added themed bootstrap

--- a/app/views/test_runs/_form.html.erb
+++ b/app/views/test_runs/_form.html.erb
@@ -1,37 +1,38 @@
-<%= form_for(@test_run) do |f| %>
-  <% if @test_run.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@test_run.errors.count, "error") %> prohibited this test_run from being saved:</h2>
-
-      <ul>
-      <% @test_run.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @test_run, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :sysname, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :sysname, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :release, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :release, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :version, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :version, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :machine, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :machine, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :notes, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :notes, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :sysname %><br />
-    <%= f.text_field :sysname %>
-  </div>
-  <div class="field">
-    <%= f.label :release %><br />
-    <%= f.text_field :release %>
-  </div>
-  <div class="field">
-    <%= f.label :version %><br />
-    <%= f.text_field :version %>
-  </div>
-  <div class="field">
-    <%= f.label :machine %><br />
-    <%= f.text_field :machine %>
-  </div>
-  <div class="field">
-    <%= f.label :notes %><br />
-    <%= f.text_field :notes %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                test_runs_path, :class => 'btn' %>
   </div>
 <% end %>
