--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title>Queueable</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -33,8 +37,6 @@
   </div>
 </div>
 
-
-
 <div class="container">
   <div class="row">
     <div class="span9">
@@ -42,6 +44,8 @@
     </div>
     <div class="span3">
       <h2>About</h2>
+      Queueable is a library for measuring the tolerance of various communication APIs to concurrent messaging. Queueable aims to
+      discover which backend communication libraries provide the best foundation to build highly concurrent programs.
     </div>
   </div>
 </div>
