--- a/app/views/test_runs/new.html.erb
+++ b/app/views/test_runs/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New test_run</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', test_runs_path %>
+<%- model_class = @test_run.class -%>
+<h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                               :default => "New #{model_class.model_name.human}") %></h1>
+<%= render :partial => 'form' %>
