--- a/app/views/test_runs/show.html.erb
+++ b/app/views/test_runs/show.html.erb
@@ -1,30 +1,35 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @test_run.class -%>
+<h1><%=t '.title', :default => model_class.model_name.human %></h1>
 
 <p>
-  <b>Sysname:</b>
+  <strong><%= model_class.human_attribute_name(:sysname) %>:</strong><br>
   <%= @test_run.sysname %>
 </p>
-
 <p>
-  <b>Release:</b>
+  <strong><%= model_class.human_attribute_name(:release) %>:</strong><br>
   <%= @test_run.release %>
 </p>
-
 <p>
-  <b>Version:</b>
+  <strong><%= model_class.human_attribute_name(:version) %>:</strong><br>
   <%= @test_run.version %>
 </p>
-
 <p>
-  <b>Machine:</b>
+  <strong><%= model_class.human_attribute_name(:machine) %>:</strong><br>
   <%= @test_run.machine %>
 </p>
-
 <p>
-  <b>Notes:</b>
+  <strong><%= model_class.human_attribute_name(:notes) %>:</strong><br>
   <%= @test_run.notes %>
 </p>
 
-
-<%= link_to 'Edit', edit_test_run_path(@test_run) %> |
-<%= link_to 'Back', test_runs_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              test_runs_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_test_run_path(@test_run), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              test_run_path(@test_run),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
