A bunch of refatoring

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,6 @@
       <a class="brand" href="#">Queueable</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Test Runs", test_runs_path %></li>
           <li class="dropdown" id="menu1">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -44,8 +43,7 @@
     </div>
     <div class="span3">
       <h2>About</h2>
-      Queueable is a library for measuring the tolerance of various communication APIs to concurrent messaging. Queueable aims to
-      discover which backend communication libraries provide the best foundation to build highly concurrent programs.
+      Queueable is a library for measuring the tolerance of various communication mechanisms to concurrent messaging.
     </div>
   </div>
 </div>
