--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Results for Batch</h1>
+<h1>Results for <%= @batch.platform.sysname %> - <%= @batch.platform.machine %></h1>
+<p><%= @batch.platform.release %> <%= @batch.platform.version %></p>
 
 <% options = {} %>
 <% options[:width] = 800 %>
@@ -10,5 +11,5 @@
 <% backends.each do |backend| %>
   <div id='line_chart_<%= backends.index backend %>'></div>
   <% options[:title] = backend %>
-  <%= render_chart line_chart(@batch.runs.where(:backend => backend), options), "line_chart_#{backends.index backend}" %>
+  <%= render_chart backend_line_chart(@batch.runs.where(:backend => backend), options), "line_chart_#{backends.index backend}" %>
 <% end %>
