--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,14 +21,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Queueable</a>
+      <a class="brand" href="/">Queueable</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li class="dropdown" id="menu1">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Linux' %></li>
-              <li><%= link_to 'SunOS' %></li>
+            <% @systems.each do |system| %>
+              <li><%= link_to system, platforms_path(:sysname => system) %></li>
+            <% end %>
             </ul>
           </li>
         </ul>
