--- a/app/views/platforms/index.html.erb
+++ b/app/views/platforms/index.html.erb
@@ -3,10 +3,11 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:sysname) %></th>
+      <th>System</th>
       <th><%= model_class.human_attribute_name(:release) %></th>
       <th><%= model_class.human_attribute_name(:version) %></th>
       <th><%= model_class.human_attribute_name(:machine) %></th>
+      <th>Submissions</th>
       <th></th>
     </tr>
   </thead>
@@ -17,6 +18,7 @@
         <td><%= platform.release %></td>
         <td><%= platform.version %></td>
         <td><%= platform.machine %></td>
+        <td><%= platform.batches.size %></td>
         <td>
           <%= link_to 'View', platform_path(platform), :class => 'btn btn-primary btn-mini' %>
         </td>
