--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="/">Queueable</a>
+      <%= link_to 'Queueable', root_path, :class => 'brand' %>
       <div class="nav-collapse">
         <ul class="nav">
           <li class="dropdown" id="menu1">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
             <ul class="dropdown-menu">
-            <% @systems.each do |system| %>
+              <li><%= link_to 'All', platforms_path %></li>
+              <% @systems.each do |system| %>
               <li><%= link_to system, platforms_path(:sysname => system) %></li>
-            <% end %>
+              <% end %>
             </ul>
           </li>
         </ul>
