--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -3,34 +3,24 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:notes) %></th>
-      <th><%= model_class.human_attribute_name(:platform_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Platform</th>
+      <th>Host</th>
+      <th>Processor</th>
+      <th>Cores</th>
+      <th>Submitted</th>
+      <th>Notes</th>
     </tr>
   </thead>
   <tbody>
     <% @batches.each do |batch| %>
       <tr>
-        <td><%= link_to batch.id, platform_batch_path(batch.platform, batch) %></td>
-        <td><%= batch.notes %></td>
-        <td><%= batch.platform_id %></td>
+        <td><%= batch.platform.name %></td>
+        <td><%= batch.host %></td>
+        <td><%= batch.processor %></td>
+        <td><%= batch.cores %></td>
         <td><%=l batch.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_platform_batch_path(batch.platform, batch), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      platform_batch_path(batch.platform, batch),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
+        <td><%= batch.notes %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_platform_batch_path,
-            :class => 'btn btn-primary' %>
