Added 'fork the project on github'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
               <% end %>
             </ul>
           </li>
+          <li><a href="https://github.com/adamonduty/queueable-web">Fork the project on github</a></li>
         </ul>
       </div>
     </div>
