--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,11 @@
 <div class="container">
   <div class="row">
     <div class="span9">
+      <% if flash[:notice] %>
+        <div class="alert alert-success"><%= flash[:notice] %></div>
+      <% elsif flash[:error] %>
+        <div class="alert alert-error"><%= flash[:error] %></div>
+      <% end %>
       <%= yield %>
     </div>
     <div class="span3">
