--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,35 +13,38 @@
 </head>
 <body>
 
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <%= link_to 'Queueable', root_path, :class => 'brand' %>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li class="dropdown" id="menu1">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'All', platforms_path %></li>
-              <% @systems.each do |system| %>
-              <li><%= link_to system, platforms_path(:sysname => system) %></li>
-              <% end %>
-            </ul>
-          </li>
-          <li><a href="https://github.com/adamonduty/queueable-web">Fork the project on github</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
+<a href="https://github.com/adamonduty"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 <div class="container">
   <div class="row">
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <%= link_to 'Queueable', root_path, :class => 'brand' %>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="dropdown" id="menu1">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'All', platforms_path %></li>
+                  <% @systems.each do |system| %>
+                  <li><%= link_to system, platforms_path(:sysname => system) %></li>
+                  <% end %>
+                </ul>
+              </li>
+              <li><a href="https://github.com/adamonduty/queueable">Learn More</a></li>
+              <li><a href="https://github.com/adamonduty/queueable/downloads">Download</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="span9">
       <% if flash[:notice] %>
         <div class="alert alert-success"><%= flash[:notice] %></div>
