--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,44 +8,49 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <script src='http://www.google.com/jsapi'></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<a href="https://github.com/adamonduty"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/adamonduty"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 10;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
+<nav class="navbar navbar-inverse" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Queueable</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown" id="menu1">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'All', platforms_path %></li>
+            <% @systems.each do |system| %>
+            <li><%= link_to system, platforms_path(:sysname => system) %></li>
+            <% end %>
+          </ul>
+        </li>
+        <li><a href="https://github.com/adamonduty/queueable">Learn More</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <div class="container">
   <div class="row">
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to 'Queueable', root_path, :class => 'brand' %>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="dropdown" id="menu1">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">Platforms<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to 'All', platforms_path %></li>
-                  <% @systems.each do |system| %>
-                  <li><%= link_to system, platforms_path(:sysname => system) %></li>
-                  <% end %>
-                </ul>
-              </li>
-              <li><a href="https://github.com/adamonduty/queueable">Learn More</a></li>
-              <li><a href="https://github.com/adamonduty/queueable/downloads">Download</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="span9">
+    <div class="col-md-9">
       <% if flash[:notice] %>
         <div class="alert alert-success"><%= flash[:notice] %></div>
       <% elsif flash[:error] %>
@@ -53,7 +58,7 @@
       <% end %>
       <%= yield %>
     </div>
-    <div class="span3">
+    <div class="col-md-3">
       <h2>About</h2>
       Queueable is a library for measuring the tolerance of various communication mechanisms to concurrent messaging.
     </div>
