Change chart metric to messages/second

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -10,7 +10,7 @@ client processes.</p>
 <% options[:width] = 800 %>
 <% options[:height] = 600 %>
 <% options[:hAxis] = {:slantedText => true, :title => 'Message Size (log scale)'} %>
-<% options[:vAxis] = {:title => 'Seconds'} %>
+<% options[:vAxis] = {:title => 'Messages / Second'} %>
 <% backends = list_backends(@batch) %>
 
 <h3>Backend Performance</h3>
