--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
             <% end %>
           </ul>
         </li>
-        <li><a href="https://github.com/adamonduty/queueable">Learn More</a></li>
+        <li><a href="https://github.com/adamonduty/queueable">Github</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
